# 4-func-calc

./: .gitignore  CMakeLists.txt  README.md  full.sh
src/: calc.c  calc.h  display.c  display.h  main.c  value.c  value.h
